--- a/composer.json
+++ b/composer.json
@@ -10,12 +10,14 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "barryvdh/laravel-dompdf": "^3.1",
         "laravel-lang/common": "^6.7",
         "laravel/framework": "^12.0",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.10.1",
         "livewire/livewire": "^3.6",
         "maatwebsite/excel": "^3.1",
+        "yajra/laravel-datatables-buttons": "^12.0",
         "yajra/laravel-datatables-oracle": "^12.0"
     },
     "require-dev": {
